--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Center for Applied Network Analysis (CANA)
-email: cana@usc.edu
+email: tvalente@usc.edu
 description: > # this means to ignore newlines until "baseurl:"
  Oficial website of USC's Center for Applied Network Analysis 
 baseurl: "" # the subpath of your site, e.g. /blog/
@@ -10,3 +10,4 @@ github_username:  USCCANA
 
 # Build settings
 markdown: kramdown
+exclude: [about.md]
